<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MyAlertActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quero_receber_notificacao"
        android:layout_marginBottom="10dp"/>

    <CheckBox
        android:id="@+id/mudanca_bateria"
        android:text="@string/alerta_mudanca_bateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="CheckboxAlert"
        />

    <CheckBox
        android:id="@+id/modo_aviao"
        android:text="@string/alerta_modo_aviao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="CheckboxAlert"
        />

    <CheckBox
        android:id="@+id/modo_conectado"
        android:text="@string/alerta_carregador_conectado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="CheckboxAlert"
        />

    <CheckBox
        android:id="@+id/modo_desconectado"
        android:text="@string/alerta_carregador_desconectado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="CheckboxAlert"
        />
</LinearLayout>
